--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -112,17 +112,17 @@ tools:context=".home">
 
     <TextView
         android:id="@+id/spot_btn"
-        android:layout_width="88dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="false"
         android:layout_centerVertical="false"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="7dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="SPOT"
+        android:text="LOCAL COLLEGE BUS"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
@@ -131,11 +131,11 @@ tools:context=".home">
         android:layout_width="126dp"
         android:layout_height="100dp"
         android:layout_centerInParent="false"
-        android:layout_marginLeft="140dp"
+        android:layout_marginLeft="155dp"
         android:layout_marginTop="90dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="BUS STATION"
+        android:text="PUBLIC BUS"
         android:textColor="#ffffff"
         android:textSize="18sp" />
     <TextView
@@ -157,6 +157,8 @@ tools:context=".home">
         android:layout_width="120dp"
         android:layout_height="5dp"
         android:layout_marginTop="113dp"
+        android:layout_marginStart="10dp"
+
         android:layout_marginBottom="3dp"
         android:background="@drawable/rounded_underline" />
 
