--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,23 +19,24 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_above="@id/card_view"
-        android:padding="28dp"
+        android:padding="5dp"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/location_icon"
-            android:contentDescription="todo" />
+            android:layout_width="323dp"
+            android:layout_height="143dp"
+            android:contentDescription="todo"
+            android:src="@drawable/logo512" />
 
         <TextView
+            android:id="@+id/track"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Go Map"
-            android:textStyle="bold"
+            android:layout_height="67dp"
             android:fontFamily="sans-serif-medium"
-            android:textSize="32sp"
-            android:textColor="@color/white"/>
+            android:text="Track N Go"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
