--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="my_primary">#5E35B1</color>
     <color name="my_secondary">#673AB7</color>
     <color name="gray">#666</color>
+    <color name="TrackNGo">#BC7B33</color>
+    <color name="TrackNGo1">#323131</color>
+    <color name="TrackNGo2">#0A0909</color>
+
 </resources>
